--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clock</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="icon" href="assets/favicon.png">
+    <link rel="icon" href="image/favicon.png">
 
   </head>
   <body>
